# VibeSafe

./: .gitignore  APP_STATUS.md  CLAUDE.md  MANIFEST.in  PROGRAMMATIC_API.md  PULL_REQUEST.md  README.md  SECURITY.md  SECURITY_ANALYSIS.md  SECURITY_FIX.md  TASK_MASTER.md  UPDATE_MECHANISM.md  capture-screenshots.sh  comprehensive-ui-test.js  generate-checksums.sh  index.html  install.sh  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py  test-app-functionality.js  test-secret-security.js  test-status-buttons.js  test-status-simulation.html  test-touchid.js  test-visual-components.html  verify-app-working.js  verify-startup-fix.js  verify-status-functionality.js  verify-ui-components.js  vibesafe-branded  vibesafe-gemini-analysis.md  vite.config.js
.github/workflows/: release.yml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html  main.js.html  updater.js.html
examples/: api_usage.py  platform_integrations.md
mockups/: all-screens.html  home-default.html  index.html  logo.html
screenshots/: README.md
src/: main.js  secure-invoke.js  updater.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: logger.rs  main.rs  updater.rs
src/vibesafe/: __init__.py  __main__.py  claude_integration.py  encryption.py  exceptions.py  fido2_passkey.py  mac_passkey.py  setup_wizard.py  storage.py  vibesafe.py
src/vibesafe/services/: __init__.py  crypto_service.py  secret_service.py  storage_service.py
tauri-app/: .eslintrc.json  Cargo.toml  README.md  index.html  install.sh  package.json  tauri.conf.json  vite.config.ts
tauri-app/src/: App.tsx  main.rs
test/: README.md  app.test.js  integration.test.js  security.test.js  setup.js
tests/: conftest.py  test_cli.py  test_encryption.py  test_integration.py  test_passkey.py  test_security.py  test_storage.py
