[package]
name = "vibesafe-app"
version = "1.0.0"
description = "VibeSafe - Secure Secrets Manager with Touch ID Protection"
authors = ["VibeSafe Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.10"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
