[package]
name = "vibesafe-app"
version = "1.0.0"
description = "VibeSafe - Secure Secrets Manager with Touch ID Protection"
authors = ["VibeSafe Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
secrecy = "0.8"
regex = "1.10"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
